# MazeCaves-Game

./: .gitignore  README.md  README_RUS.md
datasets/: save.txt
materials/: cave_examples.md  examples.md
src/: CMakeLists.txt  Doxyfile  Makefile  README_DOXYGEN.md  cave.cc  cave.h  main.cc  matrix_oop.cc  matrix_oop.h  maze.cc  maze.h
src/AppCave/: CMakeLists.txt  cave.cc  cave.h  main.cc
src/AppCave/Cave/: CMakeLists.txt  cave.h
src/AppCave/Cave/Matrix/: CMakeLists.txt  matrix_oop.cc
src/AppCave/Matrix/: CMakeLists.txt
src/AppMaze/: CMakeLists.txt
src/AppMaze/Maze/: CMakeLists.txt  maze.cc  maze.h
src/AppMaze/Maze/Matrix/: CMakeLists.txt
src/AppMaze/View/: applicationview.h
src/AppMaze/View/OpenGLWidget/: gl_override.cc
src/Maze-Cave/: CMakeLists.txt  cave.cc  cave.h  maze.cc  maze.h  maze_solver.cc  maze_solver.h
src/Maze-Cave/dependence/: CMakeLists.txt  matrix_oop.h
src/Maze-Caves/: applicationview.cc  applicationview.h
src/Maze-Caves/Maze-Caves/: CMakeLists.txt  applicationview.cc  applicationview.h  applicationview.ui  main.cc
src/Maze-Caves/Maze-Caves/OpenGLWidget/: gl_override.cc  gl_override.h
src/Maze-Caves/Maze-Caves/SettingsClass/: options_t.cc
src/Maze-Caves/OpenGLWidget/: gl_override.cc  gl_override.h
src/Maze-Caves/SettingsClass/: options.h
src/MazeCaves/: CMakeLists.txt  main.cc
src/MazeCaves/Cave/: CMakeLists.txt  cave.cc  cave.h
src/MazeCaves/CaveView/: cave_view.cc  cave_view.cpp  cave_view.h  cave_view.ui
src/MazeCaves/CaveView/OpenGLWidget/: cave_opengl_widget_override.cc  cave_opengl_widget_override.cpp  cave_opengl_widget_override.h
src/MazeCaves/Matrix/: CMakeLists.txt  matrix_oop.cc  matrix_oop.h
src/MazeCaves/Maze/: CMakeLists.txt  maze.cc  maze.h  maze_solver.cc  maze_solver.h
src/MazeCaves/View/: application_view.cc  application_view.h  application_view.ui  applicationview.cc  applicationview.ui
src/MazeCaves/View/OpenGLWidget/: gl_override.cc  gl_override.h
src/OpenGLWidget/: gl_override.cc  gl_override.h
src/SettingsClass/: options_t.h
src/View/: applicationview.cc  applicationview.h  applicationview.ui
src/View/OpenGLWidget/: gl_override.cc  gl_override.h
src/dependence/: matrix_oop.h
src/tests/: SavedCave.txt  cave.txt  cave_invalid.txt  cave_invalid_size.txt  cave_tests.cc  maze_tests.cc  test.txt  test2.txt  test3.txt  test_cave.cc  test_copy_invalid.txt  test_copy_invalid2.txt  test_invalid_data.txt  test_invalid_data2.txt  test_invalid_data3.txt
task/: README.md
